--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"commander": "1.x.x",
 		"underscore": "1.x.x",
 		"configurine-client": "0.x.x",
-		"opter": "0.x.x"
+		"opter": "0.x.x",
+		"async": "0.x.x",
+		"js-beautify": "1.x.x"
 	},
 	"devDependencies": {
 		"mocha": "1.x.x",
